<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/primer_grupo"
        android:checkableBehavior="single"
        android:enabled="false">

        <item
            android:id="@+id/nav_seccion1"
            android:icon="@drawable/ic_label"
            android:title="@string/seccion1" />

        <item
            android:id="@+id/nav_seccion2"
            android:icon="@drawable/ic_label"
            android:title="@string/seccion2" />

        <item
            android:id="@+id/nav_seccion3"
            android:icon="@drawable/ic_label"
            android:title="@string/seccion3" />

        <item android:title="@string/mas_opciones">
            <menu>
                <item
                    android:id="@+id/nav_sub_item1"
                    android:title="@string/opcion1"
                    android:icon="@drawable/ic_label"/>

                <item
                    android:id="@+id/nav_sub_item2"
                    android:title="@string/opcion2"
                    android:icon="@drawable/ic_label"/>

                <item
                    android:id="@+id/nav_sub_item3"
                    android:title="@string/opcion3"
                    android:icon="@drawable/ic_label"/>
            </menu>
        </item>

    </group>

    <group android:id="@+id/segundo_grupo">

        <item
            android:id="@+id/nav_seccion4"
            android:icon="@drawable/ic_label"
            android:title="@string/seccion4" />

        <item
            android:id="@+id/nav_seccion5"
            android:icon="@drawable/ic_label"
            android:title="@string/seccion5" />

    </group>
</menu>